--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 		<script src="assets/jquery.min.js" type="text/javascript"></script>
 		<script src="assets/knockout.min.js" type="text/javascript"></script>
 		<script src="assets/semantic.min.js" type="text/javascript"></script>
+		 <script src="https://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
 		<script src="HomeViewModel.js" type="text/javascript"></script>
 		<script src="HomeViewController.js" type="text/javascript"></script>
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.8.1/semantic.min.css" />
+		 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
 		<link rel="stylesheet" href="style.css" />
 
 		<title data-bind="text: pageTitle"></title>
