Some refactoring to get PHP working on Ubuntu, minor improvements around the app.

--- a/NavigationContent.html
+++ b/NavigationContent.html
@@ -77,7 +77,7 @@
 		</div>
 	</div>
 	<div class="actions">
-		<div class="ui button" data-bind="click: login">Login</div>
+		<div class="ui primary button" data-bind="click: login">Login</div>
 		<div class="ui button">Cancel</div>
 	</div>
 </div>
@@ -96,7 +96,7 @@
 		</div>
 	</div>
 	<div class="actions">
-		<div class="ui button" data-bind="click: register">Register</div>
+		<div class="ui primary button" data-bind="click: register">Register</div>
 		<div class="ui button">Cancel</div>
 	</div>
 </div>
