--- a/assign5/StockPortfolioContent.html
+++ b/assign5/StockPortfolioContent.html
@@ -18,8 +18,8 @@
 			</div>
 		</div>
 
-		<div class="twelve wide column" id="myPortfolio" style="display: none">
-			<div class="ui horizontal segment">
+		<div class="twelve wide column">
+			<div class="ui horizontal segment" id="myPortfolio" style="display: none">
 				<div class="ui grid">
 					<div class="three wide column">
 						<div class="ui basic segment">
@@ -37,36 +37,31 @@
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="twelve wide column" id="buySell" style="display: none">
-			<div class="ui horizontal segment">
+			<div class="ui horizontal segment" id="buySell" style="display: none">
 				<div class="ui stackable eight column grid">
-					<span data-find="foreach: stocksList">
+					<span data-find="foreach: stocksList" class="ui segment">
 						<div class="column">
-							<!-- <span data-bind="text: Company"></span> -->
+							<div data-bind="text: $data"></div>
+							<div>blah</div>
+							<!--<div data-bind="text: LastTradePriceOnly"></div>-->
 						</div>
 					</span>
-					<div class="column">
-						Placeholder
-					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="twelve wide column" id="statistics" style="display: none">
-			<div class="ui horizontal segment">
+			<div class="ui horizontal segment" id="statistics" style="display: none">
 				<div class="column">
 					Placeholder
 				</div>
 			</div>
 		</div>
-
 	</div>
 </div>
 
 
 <script src="assign5/StockList.js" type="text/javascript"></script>
+<script src="assign5/testStocks.js" type="text/javascript"></script>
 <script src="assign5/StockPortfolioViewModel.js" type="text/javascript"></script>
 <script src="assign5/StockPortfolioViewController.js" type="text/javascript"></script>
 <!--<script src="assets/highcharts.js" type="text/javascript"></script>-->
