--- a/HomeContent.html
+++ b/HomeContent.html
@@ -61,9 +61,9 @@
 			</div>
 			<div class="six wide column">
 				<ul>
-					<li>Objective 1: Introduce students to various html elements</li>
-					<li>Objective 2: Show ability to code in basic javascript</li>
-					<li>Objective 3: Creatively build a form and handle data</li>
+					<li>Objective 1: Introduce students to a Web Canvas</li>
+					<li>Objective 2: Show use of fundamentals when creating Web Canvas based animation</li>
+					<li>Objective 3: Force use of student imagination to create something unique</li>
 				</ul>
 			</div>
 		</div>
