--- a/assign5/StockPortfolioContent.html
+++ b/assign5/StockPortfolioContent.html
@@ -1,4 +1,7 @@
 <div class="ui green vertical segment" style="min-height: 400px">
+	<span class="ui green label" style="float: right; margin-right: 5%;">
+		<span data-bind="text: '$' + parseFloat(myMoney()).toFixed(2)"></span>
+	</span>
 	<div class="ui grid">
 		<div class="two wide column">
 			<div class="ui horizontal segment" style="position: fixed">
@@ -21,15 +24,16 @@
 		<div class="twelve wide column">
 			<div class="ui horizontal segment" id="myPortfolio" style="display: none">
 				<div class="ui grid">
-					<div class="three wide column">
+					<div class="two wide column">
 						<div class="ui basic segment">
-							<!-- <span data-bind="foreach: myStocks">
-								<div class="ui toggle button" data-bind="click: function() {$root.addToChart($data, $element, $root)}">
-									<span data-bind="text: name"></span>
-									<i class="external share icon"></i>
+							<span data-bind="foreach: myStocks">
+								<div class="row">
+									<div class="fluid ui toggle button" data-bind="click: function() {$root.addToChart($data, $element, $root)}, visible: Amount() > 0">
+										<i class="external share icon"></i>
+										<span data-bind="text: Name"></span>
+									</div>
 								</div>
-							</span> -->
-							Placeholder
+							</span>
 						</div>
 					</div>
 					<div class="eleven wide column">
@@ -39,12 +43,20 @@
 			</div>
 
 			<div class="ui horizontal segment" id="buySell" style="display: none">
-				<div class="ui stackable eight column grid">
-					<span data-find="foreach: stocksList" class="ui segment">
+				<div class="ui stackable eight column grid"
+					<span data-bind="foreach: stocksList">
 						<div class="column">
-							<div data-bind="text: $data"></div>
-							<div>blah</div>
-							<!--<div data-bind="text: LastTradePriceOnly"></div>-->
+							<div data-bind="text: Name"></div>
+							<div data-bind="text: '$' + LastTradePriceOnly"></div>
+							<div class="mini ui icon buttons">
+								<div class="ui red button" data-bind="click: function() {$root.decrement($data, $root)}">
+									<i class="minus icon"></i>
+								</div>
+								<div class="or" data-bind="attr: {'data-text': Amount}"></div>
+								<div class="ui green button" data-bind="click: function() {$root.increment($data, $root)}">
+									<i class="plus icon"></i>
+								</div>
+							</div>
 						</div>
 					</span>
 				</div>
@@ -60,8 +72,7 @@
 </div>
 
 
+<script src="assets/highcharts.js" type="text/javascript"></script>
 <script src="assign5/StockList.js" type="text/javascript"></script>
-<script src="assign5/testStocks.js" type="text/javascript"></script>
 <script src="assign5/StockPortfolioViewModel.js" type="text/javascript"></script>
 <script src="assign5/StockPortfolioViewController.js" type="text/javascript"></script>
-<!--<script src="assets/highcharts.js" type="text/javascript"></script>-->
