Added cookie support so you can return to the page and still be logged in. Built my own javascript router and rebuilt how the system handles routing. It's awesome!

--- a/HomeContent.html
+++ b/HomeContent.html
@@ -15,7 +15,7 @@
 		<div class="row">
 			<div class="three wide column"></div>
 			<div class="four wide column">
-				<a onclick="$('.assign1').click()"><h3>Assignment 1</h3></a>
+				<a href="#assign1"><h3>Assignment 1</h3></a>
 			</div>
 			<div class="six wide column">
 				<ul>
@@ -29,7 +29,7 @@
 		<div class="row">
 			<div class="three wide column"></div>
 			<div class="four wide column">
-				<a onclick="$('.assign2').click()"><h3>Assignment 2</h3></a>
+				<a href="#assign2"><h3>Assignment 2</h3></a>
 			</div>
 			<div class="six wide column">
 				<ul>
@@ -43,7 +43,7 @@
 		<div class="row">
 			<div class="three wide column"></div>
 			<div class="four wide column">
-				<a onclick="$('.assign3').click()"><h3>Assignment 3</h3></a>
+				<a href="#assign3"><h3>Assignment 3</h3></a>
 			</div>
 			<div class="six wide column">
 				<ul>
@@ -57,7 +57,7 @@
 		<div class="row">
 			<div class="three wide column"></div>
 			<div class="four wide column">
-				<a onclick="$('.assign4').click()"><h3>Assignment 4</h3></a>
+				<a href="#assign4"><h3>Assignment 4</h3></a>
 			</div>
 			<div class="six wide column">
 				<ul>
@@ -71,7 +71,7 @@
 		<div class="row">
 			<div class="three wide column"></div>
 			<div class="four wide column">
-				<a onclick="$('.assign5').click()"><h3>Assignment 5</h3></a>
+				<a href="#assign5"><h3>Assignment 5</h3></a>
 			</div>
 			<div class="six wide column">
 				<ul>
