--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<script src="assets/knockout.min.js" type="text/javascript"></script>
 		<script src="assets/semantic.min.js" type="text/javascript"></script>
 		<script src="assets/highcharts.js" type="text/javascript"></script>
+		<script src="assets/cookies.js" type="text/javascript"></script>
 		<script src="HomeViewModel.js" type="text/javascript"></script>
 		<script src="HomeViewController.js" type="text/javascript"></script>
 
