--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<script src="assets/jquery.min.js" type="text/javascript"></script>
 		<script src="assets/knockout.min.js" type="text/javascript"></script>
 		<script src="assets/semantic.min.js" type="text/javascript"></script>
-		<script src="assets/highcharts.js" type="text/javascript"></script>
+		<script src="assets/charts.js" type="text/javascript"></script>
 		<script src="assets/cookies.js" type="text/javascript"></script>
 		<script src="HomeViewModel.js" type="text/javascript"></script>
 		<script src="HomeViewController.js" type="text/javascript"></script>
@@ -17,6 +17,5 @@
 		<div class="navigationContent"></div>
 
 		<div class="assignmentSpace"></div>
-
 	</body>
 </html>
