Got a chart library that works! Now to setup data properly!

--- a/assign5/StockPortfolioContent.html
+++ b/assign5/StockPortfolioContent.html
@@ -9,7 +9,7 @@
 		<span data-bind="text: '$' + parseFloat(myMoney()).toFixed(2)"></span>
 	</span>
 	<div class="ui grid">
-		<div class="two wide column">
+		<div class="three wide column">
 			<div class="ui horizontal segment">
 				<div class="ui vertical menu" id="stockPortfolioMenu">
 					<div class="item"></div>
@@ -43,7 +43,7 @@
 						</div>
 					</div>
 					<div class="eleven wide column">
-						<canvas id="stockChart" style="width:600px; height:400px;"></canvas>
+						<div id="stockChart" style="width:600px; height:400px;"></div>
 					</div>
 				</div>
 			</div>
