--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<script src="assets/jquery.min.js" type="text/javascript"></script>
 		<script src="assets/knockout.min.js" type="text/javascript"></script>
 		<script src="assets/semantic.min.js" type="text/javascript"></script>
-		<script src="assets/charts.js" type="text/javascript"></script>
+		<script src="assets/canvas.js" type="text/javascript"></script>
 		<script src="assets/cookies.js" type="text/javascript"></script>
 		<script src="HomeViewModel.js" type="text/javascript"></script>
 		<script src="HomeViewController.js" type="text/javascript"></script>
