--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<script src="assets/semantic.min.js" type="text/javascript"></script>
 		<script src="assets/canvas.js" type="text/javascript"></script>
 		<script src="assets/cookies.js" type="text/javascript"></script>
+		<script src="assets/tablesorter.js" type="text/javascript"></script>
 		<script src="HomeViewModel.js" type="text/javascript"></script>
 		<script src="HomeViewController.js" type="text/javascript"></script>
 
