Forgot to update the objectives. T.T

--- a/HomeContent.html
+++ b/HomeContent.html
@@ -75,9 +75,9 @@
 			</div>
 			<div class="six wide column">
 				<ul>
-					<li>Objective 1: Introduce students to various html elements</li>
-					<li>Objective 2: Show ability to code in basic javascript</li>
-					<li>Objective 3: Creatively build a form and handle data</li>
+					<li>Objective 1: Introduce students to back-end development</li>
+					<li>Objective 2: Teach students the basics of PHP</li>
+					<li>Objective 3: Make students build the foundation of a web application</li>
 				</ul>
 			</div>
 		</div>
