Assignment 6, new beginnings! Rewrote my router to be more better!

--- a/NavigationContent.html
+++ b/NavigationContent.html
@@ -6,32 +6,36 @@
 		<i class="dropdown icon"></i>
 
 		<div class="menu">
-			<a class="item home" href="#home" data-route="HomeContent.html">
+			<a class="item home" data-route="home">
 				<i class="home icon"></i>
 				<span>Home</span>
 			</a>
 
 			<div class="header">Assignments</div>
 
-			<a class="item assign1" href="#assign1" data-route="assign1/AboutMeContent.html">
+			<a class="item assign1"data-route="assign1">
 				<i class="circle thin icon"></i>
 				<span>Assignment 1</span>
 			</a>
-			<a class="item assign2" href="#assign2" data-route="assign2/JobApplicationContent.html">
+			<a class="item assign2" data-route="assign2">
 				<i class="circle thin icon"></i>
 				<span>Assignment 2</span>
 			</a>
-			<a class="item assign3" href="#assign3" data-route="assign3/StatisticsContent.html">
+			<a class="item assign3" data-route="assign3">
 				<i class="circle thin icon"></i>
 				<span>Assignment 3</span>
 			</a>
-			<a class="item assign4" href="#assign4" data-route="assign4/BeautifulCanvasContent.html">
+			<a class="item assign4" data-route="assign4">
 				<i class="circle thin icon"></i>
 				<span>Assignment 4</span>
 			</a>
-			<a class="item assign5" href="#assign5" data-route="assign5/StockPortfolioContent.html">
+			<a class="item assign5" data-route="assign5">
 				<i class="circle thin icon"></i>
 				<span>Assignment 5</span>
+			</a>
+			<a class="item assign5" data-route="assign5">
+				<i class="circle thin icon"></i>
+				<span>Assignment 6</span>
 			</a>
 		</div>
 	</div>
