--- a/HomeContent.html
+++ b/HomeContent.html
@@ -15,7 +15,7 @@
 		<div class="row">
 			<div class="three wide column"></div>
 			<div class="four wide column">
-				<a href="#assign1"><h3>Assignment 1</h3></a>
+				<a class="navigator"><h3>Assignment 1</h3></a>
 			</div>
 			<div class="six wide column">
 				<ul>
@@ -29,7 +29,7 @@
 		<div class="row">
 			<div class="three wide column"></div>
 			<div class="four wide column">
-				<a href="#assign2"><h3>Assignment 2</h3></a>
+				<a class="navigator"><h3>Assignment 2</h3></a>
 			</div>
 			<div class="six wide column">
 				<ul>
@@ -43,7 +43,7 @@
 		<div class="row">
 			<div class="three wide column"></div>
 			<div class="four wide column">
-				<a href="#assign3"><h3>Assignment 3</h3></a>
+				<a class="navigator"><h3>Assignment 3</h3></a>
 			</div>
 			<div class="six wide column">
 				<ul>
@@ -57,7 +57,7 @@
 		<div class="row">
 			<div class="three wide column"></div>
 			<div class="four wide column">
-				<a href="#assign4"><h3>Assignment 4</h3></a>
+				<a class="navigator"><h3>Assignment 4</h3></a>
 			</div>
 			<div class="six wide column">
 				<ul>
@@ -71,7 +71,7 @@
 		<div class="row">
 			<div class="three wide column"></div>
 			<div class="four wide column">
-				<a href="#assign5"><h3>Assignment 5</h3></a>
+				<a class="navigator"><h3>Assignment 5</h3></a>
 			</div>
 			<div class="six wide column">
 				<ul>
@@ -81,5 +81,27 @@
 				</ul>
 			</div>
 		</div>
+
+		<div class="row">
+			<div class="three wide column"></div>
+			<div class="four wide column">
+				<a class="navigator"><h3>Assignment 6</h3></a>
+			</div>
+			<div class="six wide column">
+				<ul>
+					<li>Objective 1: Introduce students to the data layer</li>
+					<li>Objective 2: Teach students the basics of CRUD operations</li>
+					<li>Objective 3: Make students build the foundation of a web application</li>
+				</ul>
+			</div>
+		</div>
 	</div>
 </div>
+
+<script type="text/javascript">
+	//I am a bad, bad man.
+	$('.navigator').click(function(element) {
+		var menuOptionToClick = $(element.target).text();
+		$('a span:contains(' + menuOptionToClick + ')').click();
+	});
+</script>
