--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<script src="assets/canvas.js" type="text/javascript"></script>
 		<script src="assets/cookies.js" type="text/javascript"></script>
 		<script src="assets/tablesorter.js" type="text/javascript"></script>
+		<script src="router.js" type="text/javascript"></script>
+		<script src="routeConfig.js" type="text/javascript"></script>
 		<script src="HomeViewModel.js" type="text/javascript"></script>
 		<script src="HomeViewController.js" type="text/javascript"></script>
 
