Works slightly better, still doesn't fully work

--- a/assign6/MEEQSContent.html
+++ b/assign6/MEEQSContent.html
@@ -1,8 +1,8 @@
 <h3>MEEQS</h3>
 Menu: 
-<span data-bind="with: menuRating">
-	<span data-bind="foreach: [0,1,2]">
-		<i class="heart icon" data-bind="event: { mouseover: function() { $root.hoverHighlight($parent.softRating, $data) }, mouseout: function() { $root.removeHighlight($parent.softRating) }, click: function() { $root.clickHighlight($parent.hardRating, $data) } }, css: {empty: $data >= $parent.softRating() || $data >= $parent.hardRating() }"></i>
+<span data-bind="with: new rating()">
+	<span data-bind="foreach: [1,2,3]">
+		<i class="star icon" data-bind="event: { mouseover: function() { $root.hoverHighlight($parent.softRating, $data) }, mouseout: function() { $root.removeHighlight($parent.softRating) }, click: function() { $root.clickHighlight($parent.hardRating, $data) } }, css: {empty: ($data >= $parent.softRating() + 1 || $data >= $parent.hardRating() + 1) }"></i>
 	</span>
 </span>
 Enviroment: 
