Trying to figure out the best way to allow adding of a restaurant.

--- a/assign6/MEEQSContent.html
+++ b/assign6/MEEQSContent.html
@@ -1,5 +1,5 @@
 <div class="ui centered grid" style="margin-top: 1%;">
-	<div class="eight wide column">
+	<div class="one wide mobile column eight wide computer tablet column">
 		<div class="ui small form">
 			<h3 class="ui header">MEEQS</h3>
 
@@ -12,6 +12,7 @@
 						<div class="item" data-bind="attr: {'data-value': $data}, text: $data"></div>
 					</div>
 				</div>
+				<div class="compact inverted green ui button">Add Restaurant</div>
 			</div>
 
 			<div data-bind="foreach: categories">
